Monitoring-prom/grafa-service/grafa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: ingress-nginx
spec:
  selector:
    newlabels: grafana
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
